# raytracer

./: CMakeLists.txt  README.md
App/include/: App.hpp  constant.hpp
App/include/config/: ConfigDefault.hpp  ConfigManager.hpp  ConfigUtils.hpp
App/include/exception/: AppExceptions.hpp  BasicExceptions.hpp
App/include/graphical/: GUI.hpp  Renderer.hpp  Scene.hpp
App/include/plugins/: PluginsFileManager.hpp  PluginsLoader.hpp
App/src/: App.cpp  main.cpp
App/src/config/: ConfigManager.cpp  ConfigUtils.cpp
App/src/exceptions/: AppExceptions.cpp  DlfcnExceptions.cpp
App/src/graphical/: GUI.cpp  Renderer.cpp  Scene.cpp
App/src/plugins/: PluginsFileManager.cpp  PluginsLoader.cpp
Interface/: ICamera.hpp  ILight.hpp  IPrimitive.hpp
Interface/factory/: IFactory.hpp
Plugins/Camera/: CMakeLists.txt
Plugins/Camera/include/: Camera.hpp  FactoryCamera.hpp
Plugins/Camera/src/: Camera.cpp  FactoryCamera.cpp  entrypoint.cpp
Plugins/Light/: CMakeLists.txt
Plugins/Light/include/: FactoryLight.hpp  Light.hpp
Plugins/Light/src/: FactoryLight.cpp  Light.cpp  entrypoint.cpp
Plugins/Primitive/: CMakeLists.txt
Plugins/Primitive/include/: FactoryPrimitive.hpp  LimitedCylinder.hpp  Plane.hpp  Sphere.hpp
Plugins/Primitive/src/: FactoryPrimitive.cpp  LimitedCylinder.cpp  Plane.cpp  Sphere.cpp  entrypoint.cpp
lib/mySharedLib/: CMakeLists.txt
lib/mySharedLib/include/: SharedLibHandler.hpp  SharedLibLoader.hpp  pluginDesc.hpp
lib/mySharedLib/src/: SharedLibHandler.cpp  SharedLibLoader.cpp
lib/myUtils/: CMakeLists.txt
lib/myUtils/include/: HitPayload.hpp  Material.hpp  Ray.hpp  myUtils.hpp
lib/myUtils/src/: dot.cpp  generateFilename.cpp  multilpyColor.cpp  normalize.cpp  radians.cpp  reflect.cpp  sfDisplay.cpp
scenes/: cylinder.cfg  default_subject_scene.cfg  plane.cfg  scene1.cfg  scene2.cfg
